# energy-lang

./: .gitignore  CHANGELOG.md  LICENSE  LICENSING.md  README.md  pyproject.toml  ui.py
.github/workflows/: ci.yml
Jupyter/: 01_quickstart.ipynb  02_concept_surgery.ipynb  03_landscape_visualization.ipynb  04_model_comparison.ipynb  05_hlm_scripts.ipynb  README.md  audit_model.hlm  blend_persona.hlm  example_basic.py  example_concepts.py  example_landscape.py  example_probe.py  jupyter.py  make_polite.hlm
docs/: causal.md
examples/: README.md  hello_basins.hlm  hlm3_mix_35m_k16.hlm  hlm3_mix_35m_k16.py  multi_layer_surgery.hlm
qriton_hlm/: __init__.py  cli.py  core.py  db.py  theme.py
tests/: test_core.py  test_db.py
